# cv-ai-backend

./: .env.example  .gitignore  README.md  docker-compose.dev.yaml  pyproject.toml
alembic/: env.py
alembic/versions/: 2025_10_04_2046-603b3829371a_create_table_document_and_evaluation.py  2025_10_04_2128-43490789b376_add_column_soft_delete.py
app/: config.py  main.py
app/core/: __init__.py  dependencies.py  exceptions.py  redis_client.py
app/core/rate_limiter/: __init__.py  base.py  decorator.py  instance.py  memory.py  middleware.py  redis.py
app/database/: base.py  session.py
app/models/: __init__.py  document.py  evaluation.py
app/repositories/: __init__.py  document.py  evaluation.py
app/routes/: __init__.py  evaluate.py  result.py  upload.py
app/schemas/: __init__.py  document.py  evaluation.py
app/services/: __init__.py  evaluation_service.py  llm_service.py  rag_service.py
app/utils/: __init__.py  file_handler.py  pdf_parser.py  retry.py
app/workers/: __init__.py  evaluation_worker.py
init-db/: 01-create-test-db.sh
scripts/: ingest_reference_docs.py
tests/: conftest.py  test_e2e_workflow.py  test_rate_limiter.py  test_utils.py
tests/routes/: test_routes_evaluate.py  test_routes_result.py  test_routes_upload.py
tests/services/: test_services_evaluation.py  test_services_llm.py  test_services_rag.py
