[project]
name = "cv-ai-backend"
version = "1.0.0"
description = "AI-powered CV and Project Evaluation System"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.16.5",
    "celery[redis]>=5.5.3",
    "chromadb>=1.1.0",
    "fastapi>=0.118.0",
    "httpx>=0.28.1",
    "psycopg[binary,pool]>=3.2.10",
    "pydantic>=2.11.9",
    "pydantic-settings>=2.11.0",
    "pypdf2>=3.0.1",
    "python-dotenv>=1.1.1",
    "python-multipart>=0.0.20",
    "redis>=5.2.1",
    "sqlalchemy>=2.0.43",
    "uuid7>=0.1.0",
    "uvicorn[standard]>=0.37.0",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.13.3",
]
